lab1/Test/L1-A-4-61.cmm
float gI2EeSKjp95nr ( {
}MDDA [ 1002442094 ] ) {
  int [ 1006189094 ] [ 1287172952 ] [ 1916282882 ] 
    [ 1148888384 ] ;
  if ( R4C3Y  )   if ( OBYKSw )   if ( g1q63kYCrSRcEMiSbYe 
    >= )   if ( yzBtwyFtIhWJW ) else   W ;


|| 

}
float BSxf_e [ 429634461 ] , xFFNkdO96n , svDiS9gZGsfRM 
  || 


;
float , f 

;
